update pom xml